ChangeLog

Name: William Lai
Date: 10-20-2013
Description: Slight efficiency and AI improvement, packaged files
    * src/chess/*.java: Moved files into a package named "chess"
    * src/chess/Board.java: Added new private member variables for the squares of each King, to aid in efficiency elsewhere
    * src/chess/ComputerPlayer.java: Fixed the AI refusing to make move, as well as AI not seeing incoming checkmate
    * src/chess/StandardChessGame.java: Used Board.java change to efficiently find king locations when checking for check. Also now has rook animating after king when castling

Name: Vincent Wong
Date: 10-19-2013
Description: Selected block highlight
    * src/StandardChessGame.java: Slight modification to paint order
    * src/StandardChessGameGraphics.java: Uses an actual image to highlight a selected block
    * New files: Images/blockSelected.png
    
Name: William Lai
Date: 10-18-2013
Description: Restructuring of program
    * src/Board.java: Included "state" variables to determine if a board represents checkmate/stalemate for either side, to prevent recalculating for subsequent calls for the same position
    * src/ComputerPlayer.java: Changed static evaluation to account for changes to Board.java
    * src/Definitions.java: Added new enum for the "state" of a board
    * src/StandardChessGame.java: Changed move procedure to account for changes to Board.java. Also fixed the inability for the game to detect checkmate/stalemate (a bug that came up from the last commit).
    * TODO.txt: New file. A file that we can put tasks that need to be done in our project.

Name: Vincent Wong
Date: 10-17-2013
Description: Threading, game loop, highlighted blocks
    * src/Player.java: Added threading components. Added knowledge of color
    * src/ComputerPlayer.java: Threaded. promptMove to start evaluating
    board, isDone and getMove to retrieve results
    * src/HumanPlayer.java: Threaded. promptMove to activate mouse listener,